[package]
name = "talkbank-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TalkBank data model and validation"
readme = "README.md"

[dependencies]
crossbeam-channel = { workspace = true, optional = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
parking_lot = { workspace = true }
phf = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
talkbank-derive = { workspace = true }
text-size = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "sync"] }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
phf_codegen = { workspace = true }

[features]
default = []
async = ["tokio"]
channels = ["dep:crossbeam-channel"]
# Exposes `ChatCleanedText::test_unchecked` and `ChatRawText::test_unchecked`
# escape hatches for downstream test code that needs to construct
# `ChatCleanedText` / `ChatRawText` fixtures without going through a parsed
# AST. Production code cannot enable this feature transitively unless it
# explicitly opts in. See `text_types.rs` for the full rationale.
test-utils = []

# Panic-site audit completed 2026-04-29 (see
# `docs/panic-audit/talkbank-model.md`). 2 non-test src/ sites
# annotated; build.rs panics are exempt by spirit (build-time, not
# runtime).
[lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
unreachable   = "deny"
todo          = "deny"
unimplemented = "deny"
