[package]
name = "talkbank-parser-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared parser test harness and fixtures"
publish = false

[dependencies]
clap = { workspace = true }
comrak = { workspace = true }
insta = { workspace = true, features = ["json"] }
regex = { workspace = true } #unified
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
talkbank-model = { workspace = true }
talkbank-parser = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true } #unified
tree-sitter = { workspace = true }
tree-sitter-talkbank = { workspace = true }
walkdir = { workspace = true } #unified

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
proptest = { workspace = true }
quick-xml = { workspace = true }
rstest = { workspace = true }
talkbank-transform = { workspace = true }
