[package]
name = "talkbank-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parsing implementations for CHAT format (tree-sitter and hand-written)"
readme = "README.md"

[dependencies]
indexmap = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
talkbank-model = { workspace = true }
talkbank-direct-parser = { workspace = true }  # Word parsing delegation (Phase 2 coarsening)
thiserror = { workspace = true } #unified
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-talkbank = { workspace = true }

[dev-dependencies]
talkbank-parser-tests = { workspace = true }
divan = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "parse"
harness = false
