[package]
name = "talkbank-transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Transformation pipelines for CHAT format (CHAT ↔ JSON, normalization)"
readme = "README.md"

[dependencies]
aho-corasick = { workspace = true }
blake3 = { workspace = true }
crossbeam-channel = "0.5"
csv = { workspace = true }
dirs = { workspace = true }
jsonschema = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
num_cpus = "1.17"
quick-xml = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
sqlx = { workspace = true }
strsim = { workspace = true }
talkbank-model = { workspace = true }
talkbank-parser = { workspace = true }
talkbank-parser-re2c = { workspace = true }
thiserror = { workspace = true } #unified
tokio = { workspace = true }
tracing = { workspace = true }
whatlang = { workspace = true }
ferrous-opencc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.27"
insta = { workspace = true }
# Enables `ChatCleanedText::test_unchecked` for test fixture
# construction. Production builds of this crate cannot reach the
# escape hatch.
talkbank-model = { workspace = true, features = ["test-utils"] }

# Panic-site audit completed 2026-04-29 (see
# `docs/panic-audit/talkbank-transform.md`).
[lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
unreachable   = "deny"
todo          = "deny"
unimplemented = "deny"
