[package]
name = "chatter-desktop"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Desktop validation app for CHAT files (experimental, not yet released)"
publish = false

[lib]
name = "chatter_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chatter-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
arc-swap = "1.9"
ansi-to-html = "0.2"

# Workspace crates (relative paths to sibling crates)
talkbank-transform = { path = "../../crates/talkbank-transform" }
talkbank-model = { path = "../../crates/talkbank-model" }
send2clan-sys = { path = "../../crates/send2clan-sys" }
