[package]
name = "spec-runtime-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-talkbank = { workspace = true }

generators = { path = "../tools" }
talkbank-direct-parser = { workspace = true }
talkbank-model = { workspace = true }
talkbank-parser = { workspace = true }
