[package]
name = "generators"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Spec parsing
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
comrak = { workspace = true }

# CLI and file handling
clap = { workspace = true }
walkdir = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
regex = { workspace = true }
chrono = "0.4"
tera = { workspace = true }
unicode-normalization = { workspace = true }
chumsky = { workspace = true }

# Tree-sitter (for template generation and CST extraction)
tree-sitter = { workspace = true }
tree-sitter-talkbank = { workspace = true }

# JS parsing (grammar.js inspection)
oxc_allocator = "0.111.0"
oxc_ast = "0.111.0"
oxc_parser = "0.111.0"
oxc_span = "0.111.0"

# ARCHITECTURAL CONCERN: bootstrap and validate_error_specs need these
# Creates circular dependency: spec/tools needs rust → rust needs spec-generated tests
# TODO: Make these optional or refactor bootstrap to use tree-sitter directly
talkbank-parser = { workspace = true }
talkbank-model = { workspace = true }

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "gen_tree_sitter_tests"
path = "src/bin/gen_tree_sitter_tests.rs"

[[bin]]
name = "gen_rust_tests"
path = "src/bin/gen_rust_tests.rs"

[[bin]]
name = "gen_error_docs"
path = "src/bin/gen_error_docs.rs"

[[bin]]
name = "validate_spec"
path = "src/bin/validate_spec.rs"

[[bin]]
name = "coverage"
path = "src/bin/coverage.rs"

[[bin]]
name = "gen_validation_tests"
path = "src/bin/gen_validation_tests.rs"

[[bin]]
name = "gen_coverage_dashboard"
path = "src/bin/gen_coverage_dashboard.rs"

[[bin]]
name = "bootstrap_tiers"
path = "src/bin/bootstrap_tiers.rs"

[[bin]]
name = "validate_error_specs"
path = "src/bin/validate_error_specs.rs"

[[bin]]
name = "corpus_to_specs"
path = "src/bin/corpus_to_specs.rs"

[[bin]]
name = "fix_spec_layers"
path = "src/bin/fix_spec_layers.rs"

[[bin]]
name = "enhance_specs"
path = "src/bin/enhance_specs.rs"

[[bin]]
name = "corpus_node_coverage"
path = "src/bin/corpus_node_coverage.rs"

[[bin]]
name = "extract_corpus_candidates"
path = "src/bin/extract_corpus_candidates.rs"

[[bin]]
name = "perturb_corpus"
path = "src/bin/perturb_corpus.rs"

[dev-dependencies]
tempfile = "3.8"
