[package]
name = "batchalign-dashboard-desktop"
version = "0.1.0"
description = "Tauri desktop shell for the Batchalign3 React dashboard (experimental, not yet released)"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
