[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-talkbank"
description = "TalkBank CHAT transcription format"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "talkbank"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Franklin Chen", email = "franklinchen@franklinchen.com" }]
requires-python = ">=3.10"
license.text = "BSD-3-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/TalkBank/tree-sitter-talkbank"
Funding = "https://talkbank.org"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
